Still not showing grid but parse error fixed.

--- a/styles/Base.css
+++ b/styles/Base.css
@@ -75,8 +75,13 @@ body {
     border-top:1px solid gray;
     border-bottom:1px solid gray;
     background: #E9CAA1;
+    margin-left: 2px;
+    margin-top: 2px;
+    margin-right: 2px;
     /*width:586px;*/
-
+}
+#search_body{
+    height: 100%;
 }
 #image_box {
     border:1px solid gray;
@@ -85,8 +90,8 @@ body {
     padding-top:10px;
     padding-left:10px;
     padding-bottom:10px;
-    margin-top:10px;
-    margin-right:10px;
+    margin-top:2px;
+    margin-right:2px;
 }
 #img_info {
     border-top:1px solid gray;
@@ -101,10 +106,9 @@ form table {
 
     border:1px solid gray;
     width: 382px;
-    /*margin-top:-2px;
-    margin-left:10px;
-    text-align: center;
-    float:left;*/
+    margin-top:2px;
+    margin-left:2px;
+
 }
 
 /*
@@ -113,6 +117,6 @@ border:2px solid gray;
 }
 */
 #outGrid{
-    /*height: 22%;*/
+    height: 22%;
     font-size: 75%;
 }
